--- a/Areas/AdminPharmacyManagement/Views/Medicines/Edit.cshtml
+++ b/Areas/AdminPharmacyManagement/Views/Medicines/Edit.cshtml
@@ -10,7 +10,7 @@
 
     <div class="card shadow">
         <div class="card-body">
-            <form asp-action="Edit">
+            <form asp-action="Edit" enctype="multipart/form-data">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="MedicineId" />
 
@@ -70,7 +70,7 @@
 
                 <div class="form-group">
                     <label asp-for="Image" class="control-label font-weight-bold"><i class="fas fa-image mr-2"></i> Hình ảnh</label>
-                    <input asp-for="Image" class="form-control" />
+                    <input asp-for="Image" type="file" class="form-control" />
                     <span asp-validation-for="Image" class="text-danger"></span>
                 </div>
 
